--- a/src/MesoList.module.css
+++ b/src/MesoList.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     flex-direction: column;
     background-color: rgb(165, 161, 161);
+    padding-bottom: 5vh;
 }
   
 .MesoItem {
@@ -42,8 +43,6 @@
 
 .Check {
     margin-left: 1rem;
-    border: solid 1px black;
-    box-shadow: 1px 1px 1px 1px;
     border-radius: 20px;
     padding: 5px;
     font-weight: bold;
@@ -98,4 +97,47 @@ textarea {
 .Details:hover {
     box-shadow: 1px 1px 1px 1px;
     background-color: rgb(197, 142, 255);
+}
+
+/* Media query for mobile resolutions */
+@media only screen and (max-width: 576px) {
+    .MesoList {
+        margin-left: 0;
+        width: 100%;
+        padding: 1em;
+        padding-bottom: 10vh;
+    }
+
+    .MesoItem {
+        flex-direction: column;
+        align-items: stretch;
+        max-width: 100%;
+        padding: 1em;
+    }
+
+    .MesoText {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .MesoControls {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .SaveNote, .Delete, .Details {
+        width: 100%;
+        margin: 0.5em 0;
+        text-align: center;
+    }
+
+    textarea {
+        width: 100%;
+        margin-bottom: 0.5rem;
+    }
+
+    .MesoText > * {
+        width: 100%; 
+        margin: 0.2em 0;
+    }
 }
